force-app/main/default/objects/VRT_Vehicle__c/fields/VRT_FLG_NeedsInspection__c.field-meta.xml
<CustomField>
    <fullName>VRT_FLG_NeedsInspection__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Registra si un vehículo debe o no pasar la ITV.</description>
    <label>Necesita pasar inspección (ITV)</label>
    <type>Checkbox</type>
</CustomField>