force-app/main/default/objects/VRT_Vehicle__c/fields/VRT_NUM_Passengers__c.field-meta.xml
<CustomField>
    <fullName>VRT_NUM_Passengers__c</fullName>
    <description>Campo numérico para especificar el número de pasajeros permitidos.</description>
    <label>Pasajeros</label>
    <precision>2</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>