force-app/main/default/objects/VRT_Vehicle__c/fields/VRT_NUM_Usage__c.field-meta.xml
<CustomField>
    <fullName>VRT_NUM_Usage__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Nº de usos que se le ha dado a este vehículo.</description>
    <label>Nº de usos</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>