force-app/main/default/objects/VRT_Vehicle__c/fields/VRT_SEL_Condition__c.field-meta.xml
<CustomField>
    <fullName>VRT_SEL_Condition__c</fullName>
    <description>Estado o condición en el que se encuentra el vehículo que depende del número de usos.</description>
    <label>Condición</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Recién fabricado</fullName>
                <default>true</default>
                <label>Recién fabricado</label>
            </value>
            <value>
                <fullName>Casi nuevo</fullName>
            </value>
            <value>
                <fullName>Algo desgastado</fullName>
            </value>
            <value>
                <fullName>Bastante desgastado</fullName>
            </value>
            <value>
                <fullName>Deplorable</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>