force-app/main/default/objects/VRT_Vehicle__c/fields/VRT_SEL_EnergyType__c.field-meta.xml
<CustomField>
    <fullName>VRT_SEL_EnergyType__c</fullName>
    <description>Campo picklist para especificar el tipo de combustible o energía del vehículo.</description>
    <label>Combustible</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Eléctrico</fullName>
            </value>
            <value>
                <fullName>Híbrido</fullName>
            </value>
            <value>
                <fullName>Gasolina</fullName>
            </value>
            <value>
                <fullName>Diesel</fullName>
            </value>
            <value>
                <fullName>Otro</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>