force-app/main/default/objects/VRT_Vehicle__c/fields/VRT_SEL_Status__c.field-meta.xml
<CustomField>
    <fullName>VRT_SEL_Status__c</fullName>
    <description>Indica si el vehículo está listo para el alquiler o requiere mantenimiento.</description>
    <label>Estado</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Listo</fullName>
            </value>
            <value>
                <fullName>En mantenimiento</fullName>
            </value>
            <value>
                <fullName>Fuera de servicio</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>