force-app/main/default/objects/VRT_Vehicle__c/fields/VRT_TXT_SearchKey__c.field-meta.xml
<CustomField>
    <fullName>VRT_TXT_SearchKey__c</fullName>
    <description>Concatenación del Name + Marca + Módelo + Matrícula</description>
    <formula>Name &amp; &quot; &quot; &amp; VRT_TXT_Brand__c &amp; &quot; &quot; &amp; VRT_TXT_Model__c &amp; &quot; &quot; &amp; VRT_TXT_LicensePlate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Info para buscador</label>
    <type>Text</type>
</CustomField>