force-app/main/default/objects/VRT_Vehicle__c/validationRules/VRT_Matricula_ValidationRule.validationRule-meta.xml
<ValidationRule>
    <fullName>VRT_Matricula_ValidationRule</fullName>
    <active>true</active>
    <description>Asegura que la matrícula tenga exactamente 7 caracteres.</description>
    <errorConditionFormula>LEN( VRT_TXT_LicensePlate__c )  &lt;&gt; 7</errorConditionFormula>
    <errorMessage>La matrícula debe tener 7 caracteres.</errorMessage>
</ValidationRule>