force-app/main/default/objects/VRT_Vehicle__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>VRT_SEL_VehicleType__c</columns>
    <columns>VRT_TXT_Brand__c</columns>
    <columns>VRT_TXT_Model__c</columns>
    <columns>VRT_TXT_LicensePlate__c</columns>
    <columns>VRT_SEL_EnergyType__c</columns>
    <columns>VRT_TXT_ExternalId__c</columns>
    <columns>VRT_SEL_Status__c</columns>
    <columns>VRT_FLG_Available__c</columns>
    <columns>VRT_DAT_ManufacturedYear__c</columns>
    <columns>VRT_FLG_NeedsInspection__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>