force-app/main/default/objects/VRT_Vehicle__c/listViews/Coches.listView-meta.xml
<ListView>
    <fullName>Coches</fullName>
    <columns>NAME</columns>
    <columns>VRT_TXT_Brand__c</columns>
    <columns>VRT_TXT_Model__c</columns>
    <columns>VRT_TXT_LicensePlate__c</columns>
    <columns>VRT_NUM_Passengers__c</columns>
    <columns>VRT_TXT_Color__c</columns>
    <columns>VRT_SEL_EnergyType__c</columns>
    <columns>VRT_DAT_ManufacturedYear__c</columns>
    <columns>VRT_SEL_Condition__c</columns>
    <columns>VRT_SEL_Status__c</columns>
    <columns>VRT_NUM_Mileage__c</columns>
    <columns>VRT_FLG_Available__c</columns>
    <columns>VRT_TXT_ExternalId__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>VRT_SEL_VehicleType__c</field>
        <operation>equals</operation>
        <value>Coche</value>
    </filters>
    <label>Coches</label>
</ListView>